@@ -1,5 +1,6 @@
 0.09
  [Common]
+ - Add tests for parse().
  - Rename example files to better names.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
